@@ -6,6 +6,7 @@
 3. Allow faded groupbox frame even when not shading background.
 4. If there is no group box frame, this is set to none, or the frame is below
    the text - then don't indent the checkbox (if there is one).
+5. Improve inner 3d part of line edits, combos, spinboxes, etc.
 
 1.6.3
 -----
